# Dissecting-Atlas-Registered-Tissue

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  compile.bat  environment.yml  main.spec  pagebreaks.lua  pyproject.toml
.github/workflows/: readme-pdf.yml
dart/: __main__.py  app.py  demo.py  download_atlases.py  images.py  utils.py
dart/main/: app.py
dart/main/pages/: base.py  region_picker.py  slide_processor.py  stalign_runner.py  starter.py  target_processor.py  visualign_runner.py
dart/pages/: __init__.py  base.py  exporter.py  region_picker.py  segmentation_importer.py  slide_processor.py  stalign_runner.py  starter.py  target_processor.py  visualign_runner.py
dart/resources/: Rainbow 2017.json
dart/test/: conftest.py  load.py  test_exporter.py  test_region_picker.py  test_segmentation_importer.py  test_slide_processor.py  test_stalign_runner.py  test_starter.py  test_target_processor.py  test_visualign_runner.py  utils.py
dart/test/DART-expected/: atlas.json  calibration_points.json  regions.json  target_coordinates.json
dart/test/DART-expected/EXPORT_VISUALIGN_HERE/: report.tsv  slide1_target1_nl.flat  slide1_target2_nl.flat  slide1_target3_nl.flat
dart/test/DART-expected/output/: slide1_target1.xml  slide1_target2.xml  (+5 more)
dart/test/data/: atlas.json  calibration_points.txt  regions.json  target_coordinates.txt
demo_images/: ARRIVE_Essential10.txt
paper/: paper.bib  paper.md
src/main/: images.py  main.py  pages.py  utils.py
src/page_demos/: demo.py  starter_demo.py
tutorials/: README.md
tutorials/pdf/: README copy.md  README.md
(+32 files in other folders)
